objects/Five9__Five9BusyPresenceStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Busy Presence Status which is considered by Five9 during Omni-Channel sync</description>
    <fields>
        <fullName>Five9__Busy_Presence_Status_Id__c</fullName>
        <label>Busy Presence Status Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Busy_Presence_Status_Label__c</fullName>
        <label>Busy Presence Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Is_Default_Busy_Presence_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Busy Presence Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Is_Deleted_Busy_Presence_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted Busy Presence Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Not_Ready_Reason_Code_Name__c</fullName>
        <label>Not Ready Reason Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Owner_Id__c</fullName>
        <label>Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Five9 Busy Presence Status</label>
</CustomObject>